# py-state

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: static-analysis.yml  tests.yml
py-state/: statemachine.py
py_state/: statemachine.py
src/: exceptions.py  statemachine.py
tests/: test_statemachine.py
